--- a/conf-files/sites-available/git.conf
+++ b/conf-files/sites-available/git.conf
@@ -4,7 +4,7 @@ upstream fcgiwrap {
 
 server {
     listen 80;
-    server_name 89.169.182.22;  # ваш домен или IP
+    server_name localhost _;  # ваш домен или IP
 
     # Корень: корневая папка с bare-репозиториями
     root /var/www/git;
