первый рабочий билд

--- a/conf-files/nginx.conf
+++ b/conf-files/nginx.conf
@@ -1,3 +1,5 @@
+user www-data;
+
 events {
     worker_connections 1024;
 }
@@ -25,5 +27,6 @@ http {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     # Включаем git конфигурацию
-    include /etc/nginx/conf.d/git.conf;
+    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/sites-enabled/*;
 }
