--- a/conf-files/sites-enabled/git.conf
+++ b/conf-files/sites-enabled/git.conf
@@ -12,7 +12,7 @@ server {
     # Передаём все запросы /git/… в git-http-backend
     location ~ ^/git(/.*) {
     	auth_basic          "Git Access";
-    	auth_basic_user_file /etc/nginx/git-htpasswd;
+    	auth_basic_user_file /etc/nginx/passwd/git-htpasswd;
 
     	include fastcgi_params;
     
@@ -31,7 +31,7 @@ server {
     # (Опционально) автоиндексация для проверки
     location / {
 	auth_basic "Restricted";
-   	auth_basic_user_file /etc/nginx/.htpasswd;
+   	auth_basic_user_file /etc/nginx/passwd/git-htpasswd;
 
         autoindex on;
 	autoindex_exact_size off;
