--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   nginx-git:
     build: .
@@ -8,20 +6,17 @@ services:
     # Открытие портов
     ports:
       - "80:80"
-      - "443:443"
     
     # Только volume для git репозиториев
     volumes:
-      - git-repos:/var/git/repositories
-      - ./logs:/var/log/nginx
-    
+      - C:/Users/Evgeny/code/nginx-git-container/logs:/var/log/nginx/
+      - C:/Users/Evgeny/code/nginx-git-container/authentication:/etc/nginx/passwd/
+
     # Переменные окружения
     environment:
       - NGINX_HOST=localhost
       - NGINX_PORT=80
       - TZ=Europe/Moscow
-      - GIT_PROJECT_ROOT=/var/git/repositories
-    
     # Автоматический перезапуск
     restart: unless-stopped
     
@@ -39,5 +34,5 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: /home/evgenz/git-repositories
+      device: /home/evgenz/git
       o: bind
